# research-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  worker.py
app/agents/: constants.py  plan_agent.py  research_agent.py  synthesize_agent.py
app/api/routes/: documents.py  health.py  research.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: document.py  job.py  research.py
app/services/: cache_service.py  document_service.py  ingestion_service.py  job_service.py
app/tools/: scraper.py  search.py
migrations/: 001_initial.py  env.py
migrations/versions/: 002_add_documents.py
scripts/: test_client.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agent.py  test_api.py
