[tool.poetry]
name = "research-agent"
version = "0.1.0"
description = "Production-ready Autonomous Research Agent API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"
langchain = "^0.3.7"
langchain-openai = "^0.2.9"
langchain-groq = "^0.2.0"
langgraph = "^0.2.45"
langsmith = "^0.1.143"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
structlog = "^24.4.0"
slowapi = "^0.1.9"
tenacity = "^9.0.0"
sse-starlette = "^2.1.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.2"
factory-boy = "^3.3.1"
ruff = "^0.7.4"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]